# GDExtensionTemplate

./: CMakeLists.txt  README.md  generate.py
src/: CMakeLists.txt  register_types.cpp
